--- a/style.css
+++ b/style.css
@@ -9,18 +9,24 @@
   font-optical-sizing: auto;
   font-weight: weight;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
+ 
 }
 
+/* .container{
+    width: 71%;
+    margin: auto;   
+    max-width: 1140px;
+} */
 #top-nav {
     background-color: white;
-  margin: 0 auto;
+    
+    
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding: 16px 120px 16px 120px;
+  
 }
 .logo{
     height: 60px;
@@ -54,4 +60,135 @@ gap: 32px;
     border: none;
     border-radius: 4px;
     color: white;
+}
+.btn:hover{
+    background-color: #367b52;
+    cursor: pointer;
+}
+#hero{
+    
+    min-height: 560px;
+    background:url("./assets/hero-bg.png") ;
+    background-repeat: no-repeat;
+    display: flex;
+    
+    position: relative;
+    
+}
+.hero-con{
+    width: 1360px;
+    height: 295px;
+   
+    display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: center;
+gap: 16;
+    padding: 115.5px  120px 0px 120px;
+}
+.btn-1{
+    width: 229px;
+height: 35px;
+border: none;
+border-radius: 50px;
+background: rgba(255, 255, 255, 1);
+color: #469165;
+padding: 8px 18px;
+cursor: pointer;
+font-size: 16px;
+display: inline-flex;
+    align-items: center;
+    gap: 14px;
+    font-weight: 500;
+    line-height: 19px;
+letter-spacing: 0%;
+text-align: center;
+
+}
+.dot{
+   width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background-color: #469165;
+    box-shadow: 0 0 0 4px rgba(47, 132, 91, 0.24),0 0 0 8px rgba(47, 132, 91, 0.12); 
+    
+}
+.section-heading{
+    font-style: Bold;
+font-size: 72px;
+font-weight: 700;
+line-height: 84px;
+letter-spacing: 0%;
+text-align: center;
+text-transform: capitalize;
+color: rgba(255, 255, 255, 1);
+}
+.section-heading2{
+     
+font-size: 72px;
+font-weight: 700;
+line-height: 84px;
+letter-spacing: 0%;
+text-align: center;
+text-transform: capitalize;
+color: rgba(48, 184, 104, 1);
+}
+.text{
+    color: rgba(255, 255, 255, 1);
+font-size: 18px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: center;
+margin-top: 16px;
+line-height: 2;
+}
+.btn-3{
+    
+    margin-top: 32px;
+    display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+gap: 16px;
+
+}
+.one{
+    padding: 12px 16px 12px 16px;
+    border-radius: 4px;
+background-color:#30B868;
+color: rgba(255, 255, 255, 1);
+border: none;
+cursor: pointer;
+width: 251px;
+height: 52px;
+font-size: 16px;
+line-height: 19px;
+font-weight: 600;
+text-align: left;
+letter-spacing: 0%;
+
+}
+.two{
+    
+    width: 198px;
+height: 52px;
+color:rgba(255, 255, 255, 1);
+
+justify-content: center;
+align-items: center;
+gap: 10;
+padding: 12px 16px 12px 16px;
+box-sizing: border-box;
+border: 1px solid rgba(255, 255, 255, 1);
+border-radius: 4px;
+    background: transparent;
+    cursor: pointer;
+    font-size: 16px;
+    line-height: 19px;
+font-weight: 600
+}
+#Notes{
+   
+    color: rgba(255, 255, 255, 1)
 }
