--- a/style.css
+++ b/style.css
@@ -103,6 +103,10 @@ body {
     font-weight: 500;
 }
 
+
+    
+
+
 .dot {
     width: 6px;
     height: 6px;
@@ -147,7 +151,13 @@ body {
     justify-content: center;
     align-items: center;
     gap: 16px;
+    
 }
+.btn-3 :hover{
+    background-color: #367b52;
+    cursor: pointer;
+}
+
 
 .one {
     padding: 12px 16px;
@@ -165,6 +175,7 @@ body {
     justify-content: space-between;
 }
 
+
 .two {
     width: 198px;
     height: 52px;
@@ -181,6 +192,7 @@ body {
     font-size: 16px;
     font-weight: 600;
 }
+
 
 #Notes {
     width: 100%;
@@ -317,8 +329,157 @@ text-transform: capitalize;
     align-items: center; 
     
 
-   
-    
-    
+
     
 }
+
+ .early-section{
+    max-width: 1360px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px auto 120px auto;
+    height: 384px;
+    background-color: rgba(247, 246, 242, 1);
+    border: none; 
+    border-radius: 12px;
+    padding: 0 120px;
+}
+
+
+.early-info{
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+}
+
+.early-section h3{
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin: 0;
+    color: #000;
+}
+
+.sol-4{
+    font-size: 16px;
+    line-height: 24px;
+    color: rgba(102, 102, 102, 1);
+    margin: 0;
+}
+
+.btn-4{
+    padding: 12px 16px;
+    border-radius: 4px;
+    background-color: #30B868;
+    color: rgba(255, 255, 255, 1);
+    border: none;
+    cursor: pointer;
+    width: 194px;
+    height: 52px;
+    font-size: 16px;
+    font-weight: 600;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin: 8px 0;
+    transition: background-color 0.3s ease;
+}
+
+.btn-4:hover{
+    background-color: #289954;
+    cursor: pointer;
+}
+
+
+    .early-section h3{
+        font-size: 32px;
+        line-height: 40px;
+    }
+
+    
+   
+.footer-container {
+   width: 100%;
+        height: 348px;
+        background-color: #001931;
+   
+     
+
+       
+}
+
+.footer-info {
+    display: flex;
+    flex-direction: column;
+    width: 1360px;
+    height: 200px;
+    padding: 120px 120px 30px 120px ;
+    
+
+
+    
+   
+    
+}
+
+.logo img {
+    height: 60px;
+    width: auto;
+
+    
+}
+
+.footer-link h4 {
+    font-size: 20px;
+    font-weight: 500;
+    color: #fff;
+    margin: 0;
+    text-align: right;
+}
+
+.social-link {
+    display: flex;
+    gap: 15px;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.social-link a {
+    width: 25px;
+    height: 25px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.social-link a:hover {
+   
+    background-color: #06f516de;
+}
+
+
+footer hr {
+    border: none;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    margin: 40px 0 30px 0;
+}
+
+footer p {
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.7);
+    text-align: center;
+    margin: 0;
+}
+
+   
